membuat halaman Kategori

--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="Kategori.html">
                     <i class="fas fa-fw fa-th fa-th"></i>
                     <span>Kategori</span></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="Pengguna.html">
                     <i class="fas fa-fw fa-users"></i>
-                    <span>Penguna</span></a>
+                    <span>Pengguna</span></a>
             </li>
 
             <!-- Divider -->
@@ -88,14 +88,11 @@
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="login.html">Login</a>
-                        <a class="collapse-item" href="register.html">Register</a>
-                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="404.html">404 Page</a>
-                        <a class="collapse-item" href="blank.html">Blank Page</a>
+                        <!-- <h6 class="collapse-header">Login Screens:</h6> -->
+                        <a class="collapse-item" href="login.html">Provinsi</a>
+                        <a class="collapse-item" href="login.html">Kabupaten</a>
+                        <a class="collapse-item" href="login.html">Distrik</a>
+                        <a class="collapse-item" href="login.html">Kelurahan</a>
                     </div>
                 </div>
             </li>
@@ -116,14 +113,6 @@
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
             </div>
 
-            <!-- Sidebar Message -->
-            <div class="sidebar-card d-none d-lg-flex">
-                <img class="sidebar-card-illustration mb-2" src="img/undraw_rocket.svg" alt="...">
-                <p class="text-center mb-2"><strong>SB Admin Pro</strong> is packed with premium features, components,
-                    and more!</p>
-                <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/sb-admin-pro">Upgrade to
-                    Pro!</a>
-            </div>
 
         </ul>
         <!-- End of Sidebar -->
