--- a/organisasi.html
+++ b/organisasi.html
@@ -60,15 +60,15 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="Kategori.html">
                     <i class="fas fa-fw fa-th"></i>
                     <span>Kategori</span></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="Pengguna.html">
                     <i class="fa fa-users" aria-hidden="true"></i>
-                    <span>Penguna</span></a>
+                    <span>Pengguna</span></a>
             </li>
 
             <!-- Divider -->
@@ -88,14 +88,11 @@
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="login.html">Login</a>
-                        <a class="collapse-item" href="register.html">Register</a>
-                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="404.html">404 Page</a>
-                        <a class="collapse-item" href="blank.html">Blank Page</a>
+                        <!-- <h6 class="collapse-header">Login Screens:</h6> -->
+                        <a class="collapse-item" href="login.html">Provinsi</a>
+                        <a class="collapse-item" href="login.html">Kabupaten</a>
+                        <a class="collapse-item" href="login.html">Distrik</a>
+                        <a class="collapse-item" href="login.html">Kelurahan</a>
                     </div>
                 </div>
             </li>
@@ -168,8 +165,9 @@
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h3 mb-0 text-gray-800">Organisasi</h1>
-                        <!-- <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                                class="fas fa-download fa-sm text-white-50"></i> Generate Report</a> -->
+
+                        <a href="#" class="d-none d-sm-inline-block btn btn-primary shadow-sm"><i
+                                class="fa fa-plus mr-2" aria-hidden="true"></i>Tambah</a>
                     </div>
 
                     <!-- Content Row -->
@@ -178,7 +176,7 @@
                             <div class="table-responsive">
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
-                                        <tr>
+                                        <tr class="text-center">
                                             <th>No</th>
                                             <th>Nama Organisani</th>
                                             <th>Alamat</th>
@@ -187,15 +185,15 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>1</td>
+                                            <td class="text-center">1</td>
                                             <td>Highland Roastery</td>
                                             <td>Expo, Waena, Kota Jayapura</td>
-                                            <td>
-                                                <a href="#" class="btn btn-info btn-circle">
+                                            <td class="text-center">
+                                                <a href="#" class="btn btn-info btn-circle mr-3">
                                                     <i class="fa fa-magic" aria-hidden="true"></i>
                                                 </a>
 
-                                                <a href="#" class="btn btn-primary btn-circle">
+                                                <a href="#" class="btn btn-primary btn-circle mr-3">
                                                     <i class="fa fa-eye" aria-hidden="true"></i>
                                                 </a>
 
@@ -206,15 +204,15 @@
                                         </tr>
 
                                         <tr>
-                                            <td>2</td>
+                                            <td class="text-center">2</td>
                                             <td>SMP YPPK Katolik Biak</td>
                                             <td>Yenures, Biak Papua</td>
-                                            <td>
-                                                <a href="#" class="btn btn-info btn-circle">
+                                            <td class="text-center">
+                                                <a href="#" class="btn btn-info btn-circle mr-3">
                                                     <i class="fa fa-magic" aria-hidden="true"></i>
                                                 </a>
 
-                                                <a href="#" class="btn btn-primary btn-circle">
+                                                <a href="#" class="btn btn-primary btn-circle mr-3">
                                                     <i class="fa fa-eye" aria-hidden="true"></i>
                                                 </a>
 
