--- a/Kategori.html
+++ b/Kategori.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Organisasi</title>
+    <title>Kategori</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -53,22 +53,22 @@
             <hr class="sidebar-divider">
 
             <!-- Nav Item - Charts -->
-            <li class="nav-item active">
+            <li class="nav-item ">
                 <a class="nav-link" href="organisasi.html">
                     <i class="fas fa-fw fa-server"></i>
                     <span>Organisani</span></a>
             </li>
 
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+            <li class="nav-item active">
+                <a class="nav-link" href="Kategori.html">
                     <i class="fas fa-fw fa-th"></i>
                     <span>Kategori</span></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="Pengguna.html">
                     <i class="fa fa-users" aria-hidden="true"></i>
-                    <span>Penguna</span></a>
+                    <span>Pengguna</span></a>
             </li>
 
             <!-- Divider -->
@@ -88,14 +88,11 @@
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="login.html">Login</a>
-                        <a class="collapse-item" href="register.html">Register</a>
-                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="404.html">404 Page</a>
-                        <a class="collapse-item" href="blank.html">Blank Page</a>
+                        <!-- <h6 class="collapse-header">Login Screens:</h6> -->
+                        <a class="collapse-item" href="login.html">Provinsi</a>
+                        <a class="collapse-item" href="login.html">Kabupaten</a>
+                        <a class="collapse-item" href="login.html">Distrik</a>
+                        <a class="collapse-item" href="login.html">Kelurahan</a>
                     </div>
                 </div>
             </li>
@@ -167,64 +164,112 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Organisasi</h1>
-                        <!-- <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                                class="fas fa-download fa-sm text-white-50"></i> Generate Report</a> -->
+                        <h1 class="h3 mb-0 text-gray-800">Kategori</h1>
+                        <a href="#" class="d-none d-sm-inline-block btn btn-primary shadow-sm"><i
+                            class="fa fa-plus mr-2" aria-hidden="true"></i>Tambah</a>
                     </div>
 
                     <!-- Content Row -->
                     <div class="card shadow mb-4">
                         <div class="card-body">
                             <div class="table-responsive">
-                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                    <thead>
-                                        <tr>
+                                <table class="table table-bordered " id="dataTable" width="100%" cellspacing="0">
+                                    <thead">
+                                        <tr class="text-center">
                                             <th>No</th>
-                                            <th>Nama Organisani</th>
-                                            <th>Alamat</th>
+                                            <th>Kategori</th>
                                             <th>Opsi</th>
                                         </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>Highland Roastery</td>
-                                            <td>Expo, Waena, Kota Jayapura</td>
-                                            <td>
-                                                <a href="#" class="btn btn-info btn-circle">
-                                                    <i class="fa fa-magic" aria-hidden="true"></i>
-                                                </a>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td class="text-center">1</td>
+                                                <td>Sekolah</td>
+                                                <td class="text-center">
+                                                    <a href="#" class="btn btn-info btn-circle mr-3 ">
+                                                        <i class="fa fa-magic" aria-hidden="true"></i>
+                                                    </a>
 
-                                                <a href="#" class="btn btn-primary btn-circle">
-                                                    <i class="fa fa-eye" aria-hidden="true"></i>
-                                                </a>
+                                                    <a href="#" class="btn btn-primary btn-circle mr-3">
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                    </a>
 
-                                                <a href="#" class="btn btn-danger btn-circle">
-                                                    <i class="fas fa-trash"></i>
-                                                </a>
-                                            </td>
-                                        </tr>
+                                                    <a href="#" class="btn btn-danger btn-circle">
+                                                        <i class="fas fa-trash"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
 
-                                        <tr>
-                                            <td>2</td>
-                                            <td>SMP YPPK Katolik Biak</td>
-                                            <td>Yenures, Biak Papua</td>
-                                            <td>
-                                                <a href="#" class="btn btn-info btn-circle">
-                                                    <i class="fa fa-magic" aria-hidden="true"></i>
-                                                </a>
+                                            <tr>
+                                                <td class="text-center">2</td>
+                                                <td>Instasnsi Pemerintah</td>
+                                                <td class="text-center">
+                                                    <a href="#" class="btn btn-info btn-circle mr-3">
+                                                        <i class="fa fa-magic" aria-hidden="true"></i>
+                                                    </a>
 
-                                                <a href="#" class="btn btn-primary btn-circle">
-                                                    <i class="fa fa-eye" aria-hidden="true"></i>
-                                                </a>
+                                                    <a href="#" class="btn btn-primary btn-circle mr-3">
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                    </a>
 
-                                                <a href="#" class="btn btn-danger btn-circle">
-                                                    <i class="fas fa-trash"></i>
-                                                </a>
-                                            </td>
-                                        </tr>
+                                                    <a href="#" class="btn btn-danger btn-circle">
+                                                        <i class="fas fa-trash"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="text-center">3</td>
+                                                <td>Komunitas</td>
+                                                <td class="text-center">
+                                                    <a href="#" class="btn btn-info btn-circle mr-3">
+                                                        <i class="fa fa-magic" aria-hidden="true"></i>
+                                                    </a>
 
-                                    </tbody>
+                                                    <a href="#" class="btn btn-primary btn-circle mr-3">
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                    </a>
+
+                                                    <a href="#" class="btn btn-danger btn-circle">
+                                                        <i class="fas fa-trash"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="text-center">4</td>
+                                                <td>UMKM</td>
+                                                <td class="text-center">
+                                                    <a href="#" class="btn btn-info btn-circle mr-3">
+                                                        <i class="fa fa-magic" aria-hidden="true"></i>
+                                                    </a>
+
+                                                    <a href="#" class="btn btn-primary btn-circle mr-3">
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                    </a>
+
+                                                    <a href="#" class="btn btn-danger btn-circle">
+                                                        <i class="fas fa-trash"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="text-center">5</td>
+                                                <td>LSM</td>
+                                                <td class="text-center">
+                                                    <a href="#" class="btn btn-info btn-circle mr-3">
+                                                        <i class="fa fa-magic" aria-hidden="true"></i>
+                                                    </a>
+
+                                                    <a href="#" class="btn btn-primary btn-circle mr-3">
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                    </a>
+
+                                                    <a href="#" class="btn btn-danger btn-circle">
+                                                        <i class="fas fa-trash"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+
+                                        </tbody>
                                 </table>
                             </div>
                         </div>
