--- a/Provinsi-Papua.html
+++ b/Provinsi-Papua.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Kategori</title>
+    <title>Provinsi Papua</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -59,7 +59,7 @@
                     <span>Organisani</span></a>
             </li>
 
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="Kategori.html">
                     <i class="fas fa-fw fa-th"></i>
                     <span>Kategori</span></a>
@@ -169,112 +169,45 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Kategori</h1>
-                        <a href="#" class="d-none d-sm-inline-block btn btn-primary shadow-sm"><i
-                            class="fa fa-plus mr-2" aria-hidden="true"></i>Tambah</a>
+                        <h1 class="h3 mb-0 text-gray-800">Provinsi Papua</h1>
+
+                        <a href="Provinsi.html" class="d-none d-sm-inline-block btn btn-primary shadow-sm"><i class="fa fa-file mr-2" aria-hidden="true"></i>Cetak</a>
                     </div>
 
                     <!-- Content Row -->
                     <div class="card shadow mb-4">
                         <div class="card-body">
                             <div class="table-responsive">
-                                <table class="table table-bordered " id="dataTable" width="100%" cellspacing="0">
-                                    <thead">
+                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                    <thead>
                                         <tr class="text-center">
                                             <th>No</th>
-                                            <th>Kategori</th>
+                                            <th>Kabupaten/kota</th>
+                                            <th>Distrik</th>
+                                            <th>Kelurahan</th>
                                             <th>Opsi</th>
                                         </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td class="text-center">1</td>
-                                                <td>Sekolah</td>
-                                                <td class="text-center">
-                                                    <a href="#" class="btn btn-info btn-circle mr-3 ">
-                                                        <i class="fa fa-magic" aria-hidden="true"></i>
-                                                    </a>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td class="text-center">1</td>
+                                            <td>Jayapura</td>
+                                            <td>Sentani Timur</td>
+                                            <td>Sentani Kota</td>
+                                            <td class="text-center">
+                                                <a href="#" class="btn btn-info btn-circle mr-3">
+                                                    <i class="fa fa-magic" aria-hidden="true"></i>
+                                                </a>                                               
 
-                                                    <a href="#" class="btn btn-primary btn-circle mr-3">
-                                                        <i class="fa fa-eye" aria-hidden="true"></i>
-                                                    </a>
+                                                <a href="#" class="btn btn-danger btn-circle">
+                                                    <i class="fas fa-trash"></i>
+                                                </a>
+                                            </td>
+                                        </tr>
 
-                                                    <a href="#" class="btn btn-danger btn-circle">
-                                                        <i class="fas fa-trash"></i>
-                                                    </a>
-                                                </td>
-                                            </tr>
+                                        
 
-                                            <tr>
-                                                <td class="text-center">2</td>
-                                                <td>Instasnsi Pemerintah</td>
-                                                <td class="text-center">
-                                                    <a href="#" class="btn btn-info btn-circle mr-3">
-                                                        <i class="fa fa-magic" aria-hidden="true"></i>
-                                                    </a>
-
-                                                    <a href="#" class="btn btn-primary btn-circle mr-3">
-                                                        <i class="fa fa-eye" aria-hidden="true"></i>
-                                                    </a>
-
-                                                    <a href="#" class="btn btn-danger btn-circle">
-                                                        <i class="fas fa-trash"></i>
-                                                    </a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td class="text-center">3</td>
-                                                <td>Komunitas</td>
-                                                <td class="text-center">
-                                                    <a href="#" class="btn btn-info btn-circle mr-3">
-                                                        <i class="fa fa-magic" aria-hidden="true"></i>
-                                                    </a>
-
-                                                    <a href="#" class="btn btn-primary btn-circle mr-3">
-                                                        <i class="fa fa-eye" aria-hidden="true"></i>
-                                                    </a>
-
-                                                    <a href="#" class="btn btn-danger btn-circle">
-                                                        <i class="fas fa-trash"></i>
-                                                    </a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td class="text-center">4</td>
-                                                <td>UMKM</td>
-                                                <td class="text-center">
-                                                    <a href="#" class="btn btn-info btn-circle mr-3">
-                                                        <i class="fa fa-magic" aria-hidden="true"></i>
-                                                    </a>
-
-                                                    <a href="#" class="btn btn-primary btn-circle mr-3">
-                                                        <i class="fa fa-eye" aria-hidden="true"></i>
-                                                    </a>
-
-                                                    <a href="#" class="btn btn-danger btn-circle">
-                                                        <i class="fas fa-trash"></i>
-                                                    </a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td class="text-center">5</td>
-                                                <td>LSM</td>
-                                                <td class="text-center">
-                                                    <a href="#" class="btn btn-info btn-circle mr-3">
-                                                        <i class="fa fa-magic" aria-hidden="true"></i>
-                                                    </a>
-
-                                                    <a href="#" class="btn btn-primary btn-circle mr-3">
-                                                        <i class="fa fa-eye" aria-hidden="true"></i>
-                                                    </a>
-
-                                                    <a href="#" class="btn btn-danger btn-circle">
-                                                        <i class="fas fa-trash"></i>
-                                                    </a>
-                                                </td>
-                                            </tr>
-
-                                        </tbody>
+                                    </tbody>
                                 </table>
                             </div>
                         </div>
