--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Dashboard</title>
+    <title>Dashboard</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -89,10 +89,10 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <!-- <h6 class="collapse-header">Login Screens:</h6> -->
-                        <a class="collapse-item" href="login.html">Provinsi</a>
-                        <a class="collapse-item" href="login.html">Kabupaten</a>
-                        <a class="collapse-item" href="login.html">Distrik</a>
-                        <a class="collapse-item" href="login.html">Kelurahan</a>
+                        <a class="collapse-item" href="Provinsi.html">Provinsi</a>
+                        <a class="collapse-item" href="Kabupaten.html">Kabupaten</a>
+                        <a class="collapse-item" href="Distrik.html">Distrik</a>
+                        <a class="collapse-item" href="Kelurahan.html">Kelurahan</a>
                     </div>
                 </div>
             </li>
