--- a/organisasi.html
+++ b/organisasi.html
@@ -89,10 +89,10 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <!-- <h6 class="collapse-header">Login Screens:</h6> -->
-                        <a class="collapse-item" href="login.html">Provinsi</a>
-                        <a class="collapse-item" href="login.html">Kabupaten</a>
-                        <a class="collapse-item" href="login.html">Distrik</a>
-                        <a class="collapse-item" href="login.html">Kelurahan</a>
+                        <a class="collapse-item" href="Provinsi.html">Provinsi</a>
+                        <a class="collapse-item" href="Kabupaten.html">Kabupaten</a>
+                        <a class="collapse-item" href="Distrik.html">Distrik</a>
+                        <a class="collapse-item" href="Kelurahan.html">Kelurahan</a>
                     </div>
                 </div>
             </li>
@@ -107,6 +107,11 @@
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
+
+             <!-- Sidebar Toggler (Sidebar) -->
+             <div class="text-center d-none d-md-inline">
+                <button class="rounded-circle border-0" id="sidebarToggle"></button>
+            </div>
 
 
         </ul>
