Membuat halaman tembah data pengguna

--- a/Pengguna.html
+++ b/Pengguna.html
@@ -169,8 +169,8 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Kategori</h1>
-                        <a href="#" class="d-none d-sm-inline-block btn btn-primary shadow-sm"><i
+                        <h1 class="h3 mb-0 text-gray-800">Pengguna</h1>
+                        <a href="Add-Pengguna.html" class="d-none d-sm-inline-block btn btn-primary shadow-sm"><i
                             class="fa fa-plus mr-2" aria-hidden="true"></i>Tambah</a>
                     </div>
 
