Mengubah footer setiap halaman

--- a/Add-Organisasi.html
+++ b/Add-Organisasi.html
@@ -97,14 +97,6 @@
                 </div>
             </li>
 
-
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span></a>
-            </li>
-
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
@@ -257,7 +249,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
+                        <span>Copyright &copy; 2022 Developted by Laurens</span>
                     </div>
                 </div>
             </footer>
